2015-06-19  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_incidents.php
	  operation/incidents/incident_reports.php
	  operation/reporting/incidents_html.php: Clean code
	and improve layout of reports.

2015-06-17  Vanessa Gil <vanessa.gil@artica.es> 
	
	* godmode/grupos/lista_grupos.php
	  include/config_process.php
	  include/functions_html.php
	  include/functions_incidents.php
	  include/pdf_translator.php
	  include/ajax/incidents.php
	  include/styles/integria.css
	  operation/side_menu.php
	  operation/incidents/incidents_statistics.php
	  operation/reporting/incidents_html.php: Added
	ticket reports section.

	* images/help/custom_type_search.png
	  images/help/example_custom_search.png
	  include/help/en/help_custom_search.php
	  include/help/es/help_custom_search.php
	  operation/incidents/incidents_html.php: Added files.

2015-06-11  Vanessa Gil <vanessa.gil@artica.es> 
	
	* operation/inventory/inventory_search.php: Fixed
	bug on inventory list.

2015-06-10  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_inventories.php
	  include/js/integria_inventory.js
	  operation/inventories/inventory_search.php: Show the 
	inventory list sorted by name or last update.

2015-06-09  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_form.php
	  include/functions_db.php
	  include/functions_groups.php
	  include/functions_user.php
	  operation/incidents/incident_detail.php: Show the hierarchy 
	of groups in combos.

2015-06-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_form.php: Detecting URLs in
	workunits.

	* operation/inventories/inventory_search.php: Show untyped 
	objects in the hierarchy.

2015-06-08  Vanessa Gil <vanessa.gil@artica.es>
	

	* godmode/setup/incidents_setup.php
	  include/functions_db.php
	  operation/incidents/incident_detail.php: Added
	token in setup to not allow select a empty ticket type.

2015-06-04  Vanessa Gil <vanessa.gil@artica.es>
	
	* extras/mr/23.sql: Added file.
