@@ -1,3 +1,9 @@
+2015-06-22  Vanessa Gil <vanessa.gil@artica.es> 
+	
+	* include/ajax/incidents.php
+	  operation/incidents/incident_detail.php: Removed
+	warning message when you close an incident.
+
 2015-06-19  Vanessa Gil <vanessa.gil@artica.es> 
 	
 	* include/functions_incidents.php
